fix some review remarks